client/media/css/global.css
/* ... */
.content form select {
	width: 23.077em /* 300px */;
}

.content form .actions {
	text-align: right;
	position: relative;
}

.content form .actions .note {
	text-align: left;
	position: absolute;
	top: 0;
	margin: 0;
	line-height: 2.153em /* 28px */;
}

/* @end */

/* @group Header
-----------------------------------------------------------------------------*/

.header-container {
	z-index: 999999;
	position: absolute;
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	padding: 0 20px;
	background-color: #333;
	background-image: -webkit-gradient(
  		linear, left bottom, left top, from(#101010), to(#323232)
	);
	background-image: -moz-linear-gradient(
	    90deg, #101010, #323232
	);
	background-image: -webkit-linear-gradient(
	    90deg, #101010, #323232
	);
	background-image: linear-gradient(
	    90deg, #101010, #323232
	);
	-webkit-box-shadow: 0 0 3px #000;
	-moz-box-shadow: 0 0 3px #000;
	-ms-box-shadow: 0 0 3px #000;
	-o-box-shadow: 0 0 3px #000;
	box-shadow: 0 0 3px #000;
}

.header-container header {
	width: 100%;
	overflow: hidden;
	margin: 0 auto;
	position: relative;
	line-height: 3.077em /* 40px */;
}

.header-container h1,
.header-container h2,
.header-container h3,
.header-container nav,
.header-container nav ul,
.header-container nav li,
.header-container div,
.header-container dl,
.header-container dt,
.header-container dd {
	display: inline-block;
	margin: 0;
	text-shadow: 0 1px 0 #000;
}

.header-container,
.header-container a {
	color: #fff;
}

.header-container,
.header-container a {
	color: #fff;
}

.header-container h1 {
	position: absolute;
	left: 0;
	top: 0;
	font-size: 1.538em /* 20px */;
}

.header-container nav {
	margin-left: 25%;
	float: left;
}

.header-container nav li {
	margin-left: 2.154em /* 28px */;
}

.header-container nav li:first-child {
	margin-left: 0;
}

.header-container nav a {
	font-size: 1.077em /* 14px */;
}

.header-container .login {
	position: absolute;
	top: 0;
	right: 0;
}

.header-container .login form {
	display: none;
}

.header-container nav .login a,
.header-container nav .login button {
	font-size: 0.923em /* 12px */;
}

.header-container h2,
.header-container .login a,
.header-container .login button {
	color: #ccc;
}

.header-container h2 {
	margin-right: 60px;
	padding: 0 0.769em /* 10px */ 0 0.615em /* 8px */;
	border: 1px solid black;
	-webkit-border-radius: 0.231em /* 3px */;
	-moz-border-radius: 0.231em /* 3px */;
	-ms-border-radius: 0.231em /* 3px */;
	-o-border-radius: 0.231em /* 3px */;
	border-radius: 0.231em /* 3px */;
	line-height: 23px;
}

.header-container h2 img {
	position: relative;
	top: 3px;
	margin-right: 2px;
}

.header-container h2,
.header-container .tasks {
	margin-top: 0.615em /* 8px */;
	float: right;
	display: none;
}

.header-container .tasks {
	margin-right: 1.077em /* 14px */;
	padding: 0 0.923em /* 12px */;
	line-height: 1.923em /* 25px */;
	background-color: #000;
	background-image: -webkit-gradient(
  		linear, left bottom, left top, from(#111), to(#000)
	);
	background-image: -moz-linear-gradient(
	    90deg, #111, #000
	);
	background-image: -webkit-linear-gradient(
	    90deg, #111, #000
	);
	background-image: linear-gradient(
	    90deg, #111, #000
	);
	-webkit-border-radius: 0.962em /* 12.5px */;
	-moz-border-radius: 0.962em /* 12.5px */;
	-ms-border-radius: 0.962em /* 12.5px */;
	-o-border-radius: 0.962em /* 12.5px */;
	border-radius: 0.962em /* 12.5px */;
}

.header-container .tasks h3 {
	color: #aaa;
}

.header-container .tasks h3,
.header-container .tasks dd {
	margin-right: 0.769em /* 10px */;
}

.header-container .tasks dd {
	font-weight: bold;
	margin-right: 1em;
}

.header-container .tasks dt {
	margin-right: 0.4em;
	font-weight: normal;
	text-transform: lowercase;
}

/* @end */

/* @group Task Widget
-----------------------------------------------------------------------------*/

article.hub {
	z-index: 0;
	position: absolute;
	min-width:20.7em; /* allows hgroup to extend to fill width */
}
body.hubSelected article.hub.select {
    opacity:1;
}
body.hubSelected article.hub {
	opacity:0.5;
}

article.hub .nucleus-wrapper {
	display: block;
	position: absolute;
	left: 0;
	width: 30px;
	height: 30px;
	padding: 1.6em;
	border: 0.8em solid #111;
	margin-left: -3.4em; /* (width / 2) + padding + border-width */
	margin-top: -3.4em; /* (height / 2) + padding + border-width */
	background-color: #aaa;
	-webkit-border-radius: 4em;
	-moz-border-radius: 4em;
	-ms-border-radius: 4em;
	-o-border-radius: 4em;
	border-radius: 4em;
	z-index: 1;
	outline:none;
}

article.hub.loading .nucleus-wrapper::after {
	position: absolute;
	display: block;
	top: 50%;
	left: 50%;
	margin-left: -15px;
	margin-top: -15px;
	height: 30px;
	width: 30px;
	content: "";
	background: url(../images/hub-spinner.gif) no-repeat center center;
	opacity: 0.7;
}

article.hub a.nucleus-wrapper img {
  display: block;
  width: 30px;
  height: 30px;
}

article.select a.nucleus-wrapper {
	background-image: url(../images/hub-selected.png);
	background-repeat: no-repeat;
	background-position: center center;
}

article.hub > hgroup {
    margin-top: -2em; /* This is later changed, via JavaScript to be .outerHeight() / 2  */
    position: absolute;
	margin-left: 0;
	min-width: 10em;
	padding: 0.8em 0.8em 0.8em 4em;
	background-color: #111;
	color: #fff;
}

article.hub > div.tasks {
    position:absolute;
}

article.hub > div.tasks > canvas {
    position:absolute;
    top:0;
    pointer-events:none; /* TODO: in browsers that don't support pointer-events, the canvas element may obstruct user clicks on hubs underneath */
}

article.hub > div.tasks > ul {
	margin: 0;
	padding:0;
	list-style-type: none;
    width:100%;
    height:100%;
    position:absolute;
    top:0;
}

article.hub > div.tasks > ul > li {
	position: absolute;
	padding: 0.923em /* 12px */ 1.154em /* 15px */;
	width: 19.321em /* 250px */;
	border: 0.23075em /* 3px */ solid #aaa;
	background-color: #fff;
	height:6.4em; /* TODO: verify */
}
/* ... */

